# plastix

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt
agents/: README.md  add-example.md  add-soa-field.md  build-and-test.md  define-traits.md  dynamic-topology.md  implement-pass-policy.md  paper-sync.md
benchmarks/: CMakeLists.txt  bench_plastix.cpp
examples/: CMakeLists.txt
examples/fcc-nn/: CMakeLists.txt  fcc_nn.cpp
examples/imprinting-learner/: CMakeLists.txt  imprinting_learner.cpp  plot_results.py  test_imprinting_learner.cpp
examples/ipc-linear/: CMakeLists.txt  ipc_linear.cpp
examples/ipc-multilayer/: CMakeLists.txt  ipc_multilayer.cpp  ipc_multilayer_v2.cpp  ipc_multilayer_v3.cpp
examples/linear-regression/: CMakeLists.txt  linear_regression.cpp
examples/manual-fcc/: CMakeLists.txt  manual_fcc.cpp
examples/mlp-xor/: CMakeLists.txt  mlp_xor.cpp
examples/pipeline-fcc/: CMakeLists.txt  pipeline_fcc.cpp
examples/swifttd/: CMakeLists.txt  swifttd.cpp
include/plastix/: alloc.hpp  conn.hpp  conn_state.inc  cuda_kernels.hpp  cuda_primitives.hpp  dispatch_cpu.hpp  dispatch_gpu.hpp  layers.hpp  macros.hpp  plastix.hpp  position.hpp  random.hpp  soa.hpp  traits.hpp  unit_state.hpp  unit_state.inc
src/: plastix.cpp
tests/: CMakeLists.txt  test_alloc.cpp  test_cuda_primitives.cpp  test_plastix.cpp  test_plastix_pipeline.cpp  test_soa.cpp  test_soa_fields.inc
